# internal/dto/team_dto.go
@@ -2,8 +2,8 @@ package dto
 
 import "github.com/skndash96/lastnight-backend/internal/db"
 
-type GetTeamResponse struct {
-	Data *db.Team `json:"data"`
+type GetTeamsResponse struct {
+	Data []db.GetTeamsByUserIDRow `json:"data"`
 }
 
 type JoinTeamResponse struct {
